ChangeLog for PyLint
====================

	--

    * #92911: emit W0102 when sets are used as default arguments in functions
      (patch by tmarek@google.com)

    * #77982: do not emit E0602 for loop variables of comprehensions
      used as argument values inside a decorator (patch by tmarek@google.com)

    * #89092: don't emit E0202 (attribute hiding a method) on @property methods

    * #92584 fix pylint-gui crash due to internal API change

    * #87192 fix crash when decorators are accessed through more than one dot
      (for instance @a.b is fine, @a.b.c crash)

    * fix potential crashes with utils.safe_infer raising InferenceError


2011-12-08  --  0.25.1
    * #81078: Warn if names in  exception handlers clobber overwrite
      existing names (patch by tmarek@google.com)

    * #81113: Fix W0702 messages appearing with the wrong line number.
      (patch by tmarek@google.com)

    * #50461, #52020, #51222: Do not issue warnings when using 2.6's
      property.setter/deleter functionality (patch by dneil@google.com)

    * #9188, #4024: Do not trigger W0631 if a loop variable is assigned
      in the else branch of a for loop.



2011-10-07  --  0.25.0
    * #74742: make allowed name for first argument of class method configurable
      (patch by Google)

    * #74087: handle case where inference of a module return YES; this avoid
      some cases of "TypeError: '_Yes' object does not support indexing" (patch
      by Google)

    * #74745: make "too general" exception names configurable (patch by Google)

    * #74747: crash occurs when lookup up a special attribute in class scope
      (patch by google)

    * #76920: crash if on eg "pylint --rcfile"(patch by Torsten Marek)

    * #77237: warning for E0202 may be very misleading

    * #73941: HTML report messages table is badly rendered



2011-07-18  --  0.24.0
    * #69738: add regular expressions support for "generated-members"

    * ids of logging and string_format checkers have been changed: